@@ -28,6 +28,7 @@ from khmer import __version__, load_nodegraph
 from khmer.khmer_args import (add_threading_args, info, sanitize_help,
                               ComboFormatter, _VersionStdErrAction)
 from khmer.kfile import check_input_files
+from oxli.partition import worker
 
 # stdlib queue module was renamed on Python 3
 try:
@@ -37,32 +38,6 @@ except ImportError:
 
 DEFAULT_SUBSET_SIZE = int(1e5)
 DEFAULT_N_THREADS = 4
-
-
-def worker(tasks, basename, stop_big_traversals):
-    while True:
-        try:
-            (nodegraph, index, start, stop) = tasks.get(False)
-        except queue.Empty:
-            print('exiting', file=sys.stderr)
-            return
-
-        outfile = basename + '.subset.%d.pmap' % (index,)
-        if os.path.exists(outfile):
-            print('SKIPPING', outfile, ' -- already exists', file=sys.stderr)
-            continue
-
-        print('starting:', basename, index, file=sys.stderr)
-
-        # pay attention to stoptags when partitioning; take command line
-        # direction on whether or not to exhaustively traverse.
-        subset = nodegraph.do_subset_partition(start, stop, True,
-                                               stop_big_traversals)
-
-        print('saving:', basename, index, file=sys.stderr)
-        nodegraph.save_subset_partitionmap(subset, outfile)
-        del subset
-        gc.collect()
 
 
 def get_parser():
