@@ -1,3 +1,8 @@
+2015-08-26  Michael R. Crusoe  <crusoe@ucdavis.edu>
+
+   * scripts/{do-partition.py,},oxli/partition.py: pulled up duplicate
+   `worker` partition function into a reusable place.
+
 2015-08-24  Michael R. Crusoe  <crusoe@ucdavis.edu>
 
    * khmer/khmer_args.py: Replaced sanitize_epilog() with santize_help() that
